syntax = "proto3";

package order;

option go_package = "/apps/api-gateway/pkg/order/pb";

service OrderService {
    rpc CreateOrder(CreateOrderDto) returns (CreateOrderResponse);
    rpc GetAllOrders(GetAllOrderDto) returns (GetAllOrderResponse);
}

message GetAllOrderDto{}

message CreateOrderDto {
    string userId = 2;
    repeated CreateOrderProductsDto products = 3;
}

message CreateOrderResponse {
    string orderId = 1;
    int64 status = 2;
    string error = 3;
}

message CreateOrderProductsDto {
    string productId = 1;
    int32 quantity = 2;
}

message GetAllOrderResponse {
    repeated Order data = 1;
    int64 status = 2;
    string error = 3;
}

message Orders {
    repeated Order data = 1;
}

message Order {
    string id = 1;
    float totalPrice = 2;
    string userId = 3;
    repeated OrderProducts orderProducts = 4;
    bool isArchived = 5;
    string createdAt = 6;
    string updatedAt = 7;
}

message OrderProducts {
    string productId = 1;
    int32 quantity = 2;
    float price = 3;
}